athlete/src/screens/Mental.css
.mental_Content {
    background-color: #121212;
    color: #FEFEFE;
    padding: 4rem;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.mental_Folder {
    background-color: #202020;
    padding: 1rem;
    border-radius: 1rem;
    font-family: 'Spring';
    font-size: 0.8rem;
    margin-bottom: 4rem;
}

.mental_Content > h3 {
    font-family: 'Spring';
    margin-bottom: 4rem;
    margin-top: 2rem;
}

.mental_Content > p {
    font-size: 1rem;
    max-width: 700px;
}

.mental_Cards {
    display: flex;
    margin-bottom: 4rem;
    gap: 1rem;
    align-items: center;
    justify-content: space-between;
}

.mental_Card_Dark{
    background-color: #202020;
    color: #FEFEFE;
    padding: 1rem;
    width: 100%;
    border-radius: 1rem;
}

.mental_Card_Green{
    background-color: #C4F969;
    color: #121212;
    padding: 1rem;
    width: 100%;
    border-radius: 1rem;
}

.performance_Cards_Group {
    display: flex;
    flex-direction: column;
    background-color: blue;

}

.performance_Cards {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 1rem;
    justify-content: space-around;
}

.performance_Card {
    background-color: #202020;
    padding: 1rem;
    max-width: 300px;
    height: 150px;
    border-radius: 1rem;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    font-size: 0.8rem;
}
.performance_Card > img {
    height: 50px;
    padding: 1rem;
}

.performance_Card > p {
    width: 170px;
}

@media (max-width: 768px) {
    .mental_Cards {
        display: flex;
        flex-direction: column;
        gap: 2rem;
    }

    .performance_Cards {
        display: grid;
        grid-template-columns: repeat(2, 1fr);
        gap: 1rem;
        padding: 2rem;
    }

    .performance_Card {
        font-size: 0.6rem;
        max-width: 150px;
        height: 150px;
    }

    .performance_Card > p {
        width: 150px;
    }

}

